[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["nazariyv <nazariy@inbox.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
